--- a/antrian.html
+++ b/antrian.html
@@ -78,8 +78,44 @@
         </div>
       </div>
     </header>
-
+   
     <h2 class="text-center" style="margin-top: 2.5rem; margin-bottom: 2.5rem;">Daftar Antrian</h2>
+
+    <!-- Sedang Diperiksa-->
+    <div class="container w-25">
+      <div class="row" style="background-color: grey;">
+        <h5 class="text-center text-white">
+          SEDANG DIPERIKSA
+        </h5> 
+      </div>
+      
+      <div class="row" style="height: 200px; background-color: #0A2640;">
+        <h1 class="text-center" style="margin-top: 3rem; margin-bottom: 3rem;">
+          03
+        </h1>
+      </div>
+    </div>
+
+    <div class="container" style="margin-top: 3rem; margin-bottom: 3rem;"></div>
+
+    <!-- Nomor Antrian-->
+    <div class="container w-25">
+      <div class="row" style="background-color: grey;">
+        <h5 class="text-center text-white">
+          NOMOR ANTRIAN
+        </h5> 
+      </div>
+      
+      <div class="row" style="height: 200px; background-color: #0A2640;">
+        <h1 class="text-center" style="margin-top: 3rem; margin-bottom: 3rem;">
+          10
+        </h1>
+      </div>
+    </div>
+
+    <div class="container" style="margin-top: 3rem; margin-bottom: 3rem;"></div>
+
+
     <!-- FOOTER -->
     <footer class="bg-light text-center text-lg-start">
       <div class="container p-4">
