edit text & font

--- a/antrian.html
+++ b/antrian.html
@@ -84,13 +84,13 @@
     <!-- Sedang Diperiksa-->
     <div class="container w-25">
       <div class="row" style="background-color: grey;">
-        <h5 class="text-center text-white">
+        <h5 class="text-center text-white" style="margin-top: 0.5rem">
           SEDANG DIPERIKSA
         </h5> 
       </div>
       
-      <div class="row" style="height: 200px; background-color: #0A2640;">
-        <h1 class="text-center" style="margin-top: 3rem; margin-bottom: 3rem;">
+      <div class="row" style="font-family: 'Manrope'; height: 200px; background-color: #0A2640">
+        <h1 class="text-center text-success" style="font-family: 'Manrope'; font-size: 450%; margin-top: 3rem; margin-bottom: 4rem;">
           03
         </h1>
       </div>
@@ -101,13 +101,13 @@
     <!-- Nomor Antrian-->
     <div class="container w-25">
       <div class="row" style="background-color: grey;">
-        <h5 class="text-center text-white">
+        <h5 class="text-center text-white" style="margin-top: 0.5rem">
           NOMOR ANTRIAN
         </h5> 
       </div>
       
-      <div class="row" style="height: 200px; background-color: #0A2640;">
-        <h1 class="text-center" style="margin-top: 3rem; margin-bottom: 3rem;">
+      <div class="row" style="font-family: 'Manrope'; height: 200px; background-color: #0A2640">
+        <h1 class="text-center text-success" style="font-family: 'Manrope'; font-size: 450%; margin-top: 3rem; margin-bottom: 4rem;">
           10
         </h1>
       </div>
