--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
 
     <div class="d-flex justify-content-center">
       <div class="row" style="margin-top: 20px; margin-bottom: 2.5rem;">
+
+        <!--Jadwal-->
         <div class="col">
           <div class="card h-100" style="width: 20rem;">
             <div class="bg-image hover-overlay ripple">
@@ -88,6 +90,8 @@
             </div>
           </div>
         </div>
+
+        <!--Reservasi-->
         <div class="col">
           <div class="card h-100" style="width: 20rem;">
             <div class="bg-image hover-overlay ripple">
@@ -103,6 +107,8 @@
             </div>
           </div>
         </div>
+
+        <!--Antrian-->
         <div class="col">
           <div class="card h-100" style="width: 20rem;">
             <div class="bg-image hover-overlay ripple">
@@ -126,9 +132,8 @@
       <div class="container p-4">
         <div class="row">
           <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
-            <h4>Butuh Bantuan?</h4>
-            <p><i class="fab fa-whatsapp"></i>0877-7569-2881</p>
-            <div><i class="fab fa-instagram"></i>@klinikipbdarmaga</div>
+            <h4 style="color: #0A2640;"><img src="img/Logo Shape.png" height="20" style="margin-right: 5px;"/>Butuh Bantuan?</h4>
+            <p><img src="img/Call.png" height="13" style="margin-right: 5px;"/>0877-7569-2881</p>
           </div>
     
           <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
@@ -140,9 +145,33 @@
 
           <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
             <h6 class="fw-bold">Tentang Kami</h6>
-            <p> Alamat </p>
-            <p> Jadwal Buka </p>
-            <p> E-mail </p>
+            <div class="row">
+              <div class="col-lg-1">
+                <img src="img/Loc.png" height="18" style="margin-right: 5px;"/>
+              </div>
+              <div class="col">
+                <p>Jl. Raya Dramaga, Kampus IPB Dramaga Bogor, 16680, Jawa Barat, Indonesia</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-1">
+                <img src="img/time.png" height="18" style="margin-right: 5px;"/>
+              </div>
+              <div class="col">
+                <p>Senin - Kamis & Sabtu, 08.00 - 20.00 <br>
+                  Jumat, 09.00 - 20.00</p>
+              </div>
+            </div>
+            
+            <div class="row">
+              <div class="col-lg-1">
+                <img src="img/email.png" height="18" style="margin-right: 5px;"/>
+              </div>
+              <div class="col">
+                <p>unitkesehatan@apps.ipb.ac.id </p>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
