--- a/reservasi.html
+++ b/reservasi.html
@@ -72,18 +72,22 @@
     <form action="reservasi2.html">
       <div class="card border border-dark mb-3" style="margin-left: 8rem; margin-right: 8rem;">
         <div class="card-body">
+          <!-- No. Rekam Medis -->
           <h6>No. Rekam Medis</h6>
           <div class="form-outline border border-dark">
               <input type="text" class="form-control"/>
           </div>
+          <!-- Tanggal Lahir -->
           <h6 style="margin-top: 1.5rem;">Tanggal Lahir</h6>
           <div class="form-outline border border-dark">
               <input type="date" class="form-control"/>
           </div>
+          <!-- Nama -->
           <h6 style="margin-top: 1.5rem;">Nama Lengkap</h6>
           <div class="form-outline border border-dark">
               <input type="text" class="form-control"/>
           </div>
+          <!-- Status-->
           <h6 style="margin-top: 1.5rem;">Status</h6>
           <div class="form-outline border border-dark">
               <select class="form-group form-control">
@@ -92,16 +96,28 @@
                   <option value="3">Mahasiswa S1</option>
                 </select>
           </div>
+          <!-- Tanggal -->
+          <h6 style="margin-top: 1.5rem;">Tanggal Reservasi</h6>
+          <div class="form-outline border border-dark">
+              <input type="date" class="form-control"/>
+          </div>
+          <!-- Sesi -->
+          <h6 style="margin-top: 1.5rem;">Jadwal Sesi</h6>
+          <div class="form-outline border border-dark">
+              <select class="form-group form-control">
+                  <option value="1">Pagi</option>
+                  <option value="2">Siang</option>
+                  <option value="3">Sore</option>
+                </select>
+          </div>
         </div>
       </div>
 
       <!-- SUBMIT BUTTON -->
       <div class="text-center">
         <button type="submit" class="btn btn-primary" style="margin-top: 1rem; margin-bottom: 2rem; background-color: #0A2640; width: 15rem; border-radius: 10px;">
-          Cek Data</button>
+          Simpan</button>
       </div>  
-      
-        
     </form>
 
     <!-- FOOTER -->
