--- a/index.html
+++ b/index.html
@@ -73,46 +73,49 @@
     <div class="row" style="margin-top: 20px; margin-bottom: 2.5rem;">
       <div class="col">
         <div class="card h-100" style="width: 20rem;">
-          <div class="bg-image hover-overlay ripple">
+          <div class="bg-image hover-overlay hover-zoom ripple">
             <img src="img/jadwal.png" class="card-img-top" />
             <a href="jadwal.php">
               <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
             </a>
-          </div>
-
-          <div class="card-body">
-            <h5 class="card-title">Melihat Jadwal Pelayanan</h5>
-            <p class="card-text">Informasi mengenai jadwal pelayanan poliklinik.</p>
+            
+            <div class="card-body">
+              <h5 class="card-title">Melihat Jadwal Pelayanan</h5>
+              <p class="card-text">Informasi mengenai jadwal pelayanan poliklinik.</p>
+            </div>
           </div>
         </div>
       </div>
+
       <div class="col">
         <div class="card h-100" style="width: 20rem;">
-          <div class="bg-image hover-overlay ripple">
+          <div class="bg-image hover-overlay hover-zoom ripple">
             <img src="img/reservasi.png" class="card-img-top" />
             <a href="reservasi.php">
               <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
             </a>
-          </div>
 
-          <div class="card-body">
-            <h5 class="card-title">Reservasi Online</h5>
-            <p class="card-text">Mempermudah pendaftaran pelayanan secara online. </p>
+            <div class="card-body">
+              <h5 class="card-title">Reservasi Online</h5>
+              <p class="card-text">Mempermudah pendaftaran pelayanan secara online. </p>
+            </div>
           </div>
         </div>
       </div>
+
       <div class="col">
         <div class="card h-100" style="width: 20rem;">
-          <div class="bg-image hover-overlay ripple">
+          <div class="bg-image hover-overlay hover-zoom ripple">
             <img src="img/antrian.png" class="card-img-top" />
             <a href="antrian.php">
               <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
             </a>
-          </div>
+          
 
-          <div class="card-body">
-            <h5 class="card-title">Daftar Antrian</h5>
-            <p class="card-text">Informasi mengenai nomor antrian pelayanan yang sedang berjalan.</p>
+            <div class="card-body">
+              <h5 class="card-title">Daftar Antrian</h5>
+              <p class="card-text">Informasi mengenai nomor antrian pelayanan yang sedang berjalan.</p>
+            </div>
           </div>
         </div>
       </div>
